ARR Stack/overseerr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: arr-stack
spec:
  selector:
    app: overseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
